# javelin

./: .gitignore  LICENSE  Main.hs  README.md  bytecode.html  cabal.project.local  cabal.sandbox.config  javelin.cabal  javeline.cabal  stack.yaml  todo.md
Javelin/: ByteCode.hs
app/: Main.hs
java/sample-app/: pom.xml
java/sample-app/src/test/java/javelin/demo/: AppTest.java
src/: Main.hs
src/Javelin/: ByteCode.hs  ByteCode2.hs  JVMApp.hs  Logging.hs  Main.hs  Termination.hs  Util.hs
src/Javelin/ByteCode/: Attribute.hs  ClassFile.hs  ConstantPool.hs  Data.hs  DescSign.hs  FieldMethod.hs  Header.hs  Stats.hs  Utils.hs
src/Javelin/Capability/: ClassPathLayout.hs  ClassPathLoading.hs  Classes.hs  Loading.hs  Logging.hs  Termination.hs
src/Javelin/Interpreter/: ClassPathLoading.hs  JVMApp.hs  Loading.hs  Logging.hs  StdIO.hs  Termination.hs
src/Javelin/Lib/: Structures.hs
src/Javelin/Lib/ByteCode/: Attribute.hs  ClassFile.hs  ConstantPool.hs  Data.hs  DescSign.hs  FieldMethod.hs  Stats.hs  Utils.hs
src/Javelin/Runtime/: DescSign.hs  Instructions.hs  Structures.hs  Thread.hs
src/Javelin/Runtime/LLI/: Bootstrap.hs  ClassPath.hs  Initializing.hs  Linking.hs  LinkingInitializing.hs  Loading.hs  Resolve.hs  Resolving.hs
src/Javelin/Runtime/LLI/Loading/: DeriveClass.hs  DeriveSymTable.hs  Loading.hs
src/Javelin/Runtime/Linkage/: Loading.hs
src/Javelin/Runtime/Structure/: Thread.hs
test/: Main.hs
test-programs-output/: .gitignore
test-programs/javelin/: AndOfIntegers.java  AndOfLongs.java  DivOfDoubles.java  DivOfFloats.java  DivOfIntegers.java  DivOfLongs.java  LeftShiftOfIntegers.java  LeftShiftOfLongs.java  MulOfDoubles.java  MulOfFloats.java  MulOfIntegers.java  MulOfLongs.java  NegDouble.java  NegFloats.java  NegInteger.java  NegLong.java  OrOfIntegers.java  OrOfLongs.java  RemOfIntegers.java  RemOfLongs.java  RightShiftOfIntegers.java  RightShiftOfLongs.java  SubOfDoubles.java  SubOfFloats.java  SubOfIntegers.java  SubOfLongs.java  SumOfDoubles.java  SumOfFloats.java  SumOfIntegers.java  SumOfLongs.java  UnsignedRightShiftOfIntegers.java  UnsignedRightShiftOfLongs.java  XorOfIntegers.java  XorOfLongs.java
test-programs/javelin/demo/: App.java
test-programs/javelin/test/: App.java
test/Javelin/: ByteCode.hs
test/Javelin/ByteCode/: Test.hs
test/Javelin/Lib/ByteCode/: Test.hs
