cabal-version:       2.4
name:                javelin
version:             0.1.0.0
synopsis:            Haskell JVM Javelin
-- description:         
homepage:            http://github.com/antonlogvinenko/javelin
license:             MIT
license-file:        LICENSE
author:              Anton Logvinenko
maintainer:          anton.logvinenko@gmail.com
-- copyright:           
category:            System
build-type:          Simple

library
  exposed-modules:
      Javelin.Main,
      Javelin.Lib.ByteCode.ClassFile,
      Javelin.Lib.ByteCode.DescSign,
      Javelin.Lib.ByteCode.Stats
  other-modules:
      Javelin.Lib.ByteCode.Data,
      Javelin.Lib.ByteCode.Utils,
      Javelin.Lib.ByteCode.ConstantPool,
      Javelin.Lib.ByteCode.FieldMethod,
      Javelin.Lib.ByteCode.Attribute,
      Javelin.Runtime.Instructions,
      Javelin.Runtime.Thread,
      Javelin.Interpreter.Loading,
      Javelin.Lib.Structures,
      Javelin.Interpreter.ClassPathLoading,
      Javelin.Interpreter.Logging,
      Javelin.Interpreter.Termination,
      Javelin.Interpreter.StdIO,
      Javelin.Capability.Classes,
      Javelin.Interpreter.JVMApp
  hs-source-dirs:
      src
  build-depends:
      base,
      bytestring,
      containers,
      binary,
      utf8-string,
      parsec,
      directory,
      array,
      data-binary-ieee754,
      zip-archive,
      filepath,
      mtl,
      transformers,
      split,
      MissingH,
      lens,
      pretty-show,
      optparse-applicative,
      rainbow,
      tasty,
      process,
      HUnit,
      tasty-hunit,
      text,
      time
  default-language: Haskell2010
  ghc-options:
                    -- -Wall
                    -Werror
                    -fwarn-tabs
                    -- -fwarn-incomplete-patterns
                    -fwarn-overlapping-patterns
                    -fwarn-unused-imports
                    -- -Wincomplete-record-updates
                    -- -fwarn-monomorphism-restriction
                    -- -fwarn-implicit-prelude
                    -- -fwarn-missing-import-lists
                        
test-suite javelin-test
  hs-source-dirs:    test
  main-is:           Main.hs
  type:              exitcode-stdio-1.0
  build-depends:     base,
    --                 relude ==0.5.0,
                     javelin,
                     Cabal,
                     containers,
                     tasty,
                     process,
                     HUnit,
                     tasty-hunit,
                     text,
                     directory
  other-modules:
      Javelin.Lib.ByteCode.Test
  --mixins:
  --    base hiding (Prelude),
  --    relude (Relude as Prelude)
  default-language: Haskell2010

executable javelin
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:
                      -- -Wall
                      -Werror
                      -fwarn-tabs
                    --   -fwarn-incomplete-patterns
                      -fwarn-overlapping-patterns
                      -fwarn-unused-imports
                      -Wincomplete-record-updates
                    --   -fwarn-monomorphism-restriction
                      -- -fwarn-implicit-prelude
                      -- -fwarn-missing-import-lists
  build-depends:       base,
                       bytestring,
                       containers,
                       binary,
                       utf8-string,
                       parsec,
                       directory,
                       array,
                       data-binary-ieee754,
                       zip-archive,
                       filepath,
                       mtl,
                       transformers,
                       split,
                       MissingH,
                       lens,
                       pretty-show,
                       process,
                       rainbow,
                       javelin
  default-language: Haskell2010